// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResponsiveCard should match snapshot with custom padding and margin 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "margin": 16,
          "maxWidth": undefined,
        }
      }
      testID="responsive-card-container"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "rgba(247, 243, 249, 1)",
            "borderRadius": 12,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.15,
            "shadowRadius": 3,
          }
        }
        testID="card-container-outer-layer"
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "rgba(247, 243, 249, 1)",
              "borderRadius": 12,
              "flex": undefined,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.3,
              "shadowRadius": 1,
            }
          }
          testID="card-container"
        >
          <View
            style={
              [
                {
                  "flexShrink": 1,
                },
                undefined,
              ]
            }
            testID="card"
          >
            <View
              borderRadiusStyles={{}}
              index={0}
              siblings={
                [
                  "View",
                ]
              }
              style={
                {
                  "padding": 20,
                }
              }
              testID="responsive-card-content"
              total={1}
            >
              <Text>
                Snapshot Test
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`ResponsiveCard should match snapshot with default props 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "margin": 16,
          "maxWidth": undefined,
        }
      }
      testID="responsive-card-container"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "rgba(247, 243, 249, 1)",
            "borderRadius": 12,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.15,
            "shadowRadius": 3,
          }
        }
        testID="card-container-outer-layer"
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "rgba(247, 243, 249, 1)",
              "borderRadius": 12,
              "flex": undefined,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.3,
              "shadowRadius": 1,
            }
          }
          testID="card-container"
        >
          <View
            style={
              [
                {
                  "flexShrink": 1,
                },
                undefined,
              ]
            }
            testID="card"
          >
            <View
              borderRadiusStyles={{}}
              index={0}
              siblings={
                [
                  "View",
                ]
              }
              style={
                {
                  "padding": 24,
                }
              }
              testID="responsive-card-content"
              total={1}
            >
              <Text>
                Snapshot Test
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`ResponsiveCard should match snapshot with outlined mode 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "margin": 16,
          "maxWidth": undefined,
        }
      }
      testID="responsive-card-container"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#ffffff",
            "borderRadius": 12,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
          }
        }
        testID="card-container-outer-layer"
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#ffffff",
              "borderRadius": 12,
              "flex": undefined,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0,
              "shadowRadius": 0,
            }
          }
          testID="card-container"
        >
          <View
            pointerEvents="none"
            style={
              [
                {
                  "borderColor": "#79747e",
                },
                {
                  "borderWidth": 1,
                  "height": "100%",
                  "position": "absolute",
                  "width": "100%",
                  "zIndex": 2,
                },
                {
                  "borderRadius": 12,
                },
              ]
            }
            testID="card-outline"
          />
          <View
            style={
              [
                {
                  "flexShrink": 1,
                },
                undefined,
              ]
            }
            testID="card"
          >
            <View
              borderRadiusStyles={{}}
              index={0}
              siblings={
                [
                  "View",
                ]
              }
              style={
                {
                  "padding": 24,
                }
              }
              testID="responsive-card-content"
              total={1}
            >
              <Text>
                Snapshot Test
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
